src/css/Shared/page2.css
html{
    height:100%;
    padding: 0;
    margin:0;
}
* {
    outline: 1px solid red;
  }

#root{
    width:100%;
    height:100%;
    padding: 0;
    margin:0;
}

.Body2Part{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    background-color: #F1EEEA;

    width: 100%;
    height: 100%;
    padding: 0px;
    margin: 0px;
}

.leftSide2Part{
    width: 155px;
    height: 100%;
}

.rightSide2Part{
    height: 100%;
    width: 100%;
    min-width: 980px;
    background-color: transparent;

    display: flex;
    justify-content: center;
}

.mainInfo{
    height: 100%;
    width: 900px;
    display: flex;
    flex-direction: column;
}

.TopInfo{
    height: 600px;
}


.BottomInfo{
    height: 100%;
}

